--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://streetdreams.nyc/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Street Dreams NYC'
 publishDir = 'docs'
